<resources>
    <string name="app_name">iCare</string>
    <string name="login">Login</string>
    <string name="register">Not a member? (Join-Us Now!)</string>
    <string name="main">Every home, every heart and every feeling is incomplete without iCare !</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forget your password?</string>
    <string name="remember">Remember me</string>
    <string name="loginhead">Log Into Your Account !</string>
    <string name="loginme">Already Registered! Login me</string>
    <string name="registerhead">Create your own account !</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="date">Date Of Birth</string>
    <string name="registerbutton">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="complete">Almost finished !</string>
    <string name="next">Next</string>
    <string name="symptomshead">Please Complete your profile</string>
    <string name="disease">Chronic diseases</string>
    <string name="Pcondition">Physical Condition</string>
    <string name="history">Medical History</string>
    <string name="allergies">Allergies</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="governate">Governate</string>
    <string name="welcome">Welcome \"Name\"</string>
    <string name="resulthead">Here\'s Your Result !</string>
    <string name="getwell">- We wish you to get well soon ! - </string>
    <string name="diseaseresult">Your Suspected Disease is :</string>
    <string name="result">Disease Name</string>
    <string name="drug">Your Appropriate Drug is : </string>
    <string name="drugname">Drug Name</string>
    <string name="more">More About Drug</string>
    <string name="getpharmacy">Get Pharmacies</string>
    <string name="gethospital">Get Hospitals</string>
    <string name="name">Doha Mamdouh</string>
    <string name="personal">Personal Infromation: </string>
    <string name="edit">Edit</string>
    <string name="aboutheader">About-Us !</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="aboutbody">The easiest way to lookup drug information, identify the disease, check interactions and set up your own personal medication records.</string>
    <string name="search">Search Drug</string>
    <string name="head">Welcome to iCare !</string>
    <string name="contact">Feel Free To Contact Us !</string>
    <string name="header">Where everyone\'s living in a mobile world !</string>
    <string name="message">Your Message</string>
    <string name="send">Send</string>
    <string name="symptoms">Please enter the symptoms</string>
    <string name="firstsymptom">First Symptom</string>
    <string name="secondsymptom">Second Symptom</string>
    <string name="thirdsymptom">Third Symptom</string>
    <string name="forthdsymptom">Forth Symptom</string>
    <string name="fifthsymptom"> Fifth Symptom</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="you">For you!</string>
    <string name="another">Anybody else!</string>
    <string name="write">You can wirte your symptoms Here!</string>
    <string name="action_settings">Settings</string>
    <string name="age">Age</string>
    <string name="slogan">It\'s free and always will be</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="faq">FAQ</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="q1">Who is iCare?</string>
    <string name="a1">Medical mobile application to look up drug information and identify diseases</string>
    <string name="q2">How can I enter my symptoms?</string>
    <string name="a2">You can choose from navigation bar the enter you symptoms option and choose five symptoms from drop down and enter submit</string>
    <string name="q3">How can I show the nearest pharmacies and hospotals?</string>
    <string name="a3">You can open GPS and enter the map buttom and it will present the nearest hospitals and pharmacies</string>
    <string name="q4">How can I know any information about any dryg I want?</string>
    <string name="a4">You can write the name of the drug you want and it will  the present the uese and side effects of the drug </string>
    <string name="q5">How can I know my disease?</string>
    <string name="a5">You can choose from navigation bar the enter you symptoms option and choose five symptoms from drop down and enter submit and it will appear the suspected disease and suitable drug</string>
    <string name="description">Description of this medicine</string>
    <string name="sym">Descrip the symptoms</string>
    <string name="Description">Description of this medicine </string>
    <string name="recommended_medication">Recommended Medication </string>
    <string name="wrong_password">wrong user or password</string>


    <string name="invalid_fname">Please enter a valid first name greater than 3 letters</string>
    <string name="invalid_lname">Please enter a valid last name greater than 3 letters</string>
    <string name="invalid_phone">Please enter a valid phone 11 Number</string>

    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_age">Age must be between 12 and 60.</string>
    <string name="invalid_oldPassword">Please enter a valid password
        greater than 4 letters and less than 10 letters</string>
    <string name="invalid_password">Please enter a valid password
    greater than 4 letters and less than 10 letter</string>

    <string name="invalid_confirm_password">Password does not match</string>
    <string name="re_enter_password">Re Enter password</string>
    <string name="save_data">Save Data</string>
    <string name="old_password">Write your current password</string>
    <string name="forgot_message">the password will be sent to your e_mail</string>
    <string name="login_account">login to my account</string>
    <string name="edit_profile">Edit your personal data</string>
    <string name="change_password">If you want to change your password write your new password here :</string>
    <string name="medical_history">Your medical history</string>
    <string name="network_error">Network Error</string>
    <string name="data_saved">Your Data Saved</string>
    <string name="cannot_save">Cannot Save</string>
    <string name="send_password">Send Password</string>
    <string name="please_wait">Please wait...</string>


</resources>
