<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding16"
    tools:context="com.example.doha_.icare.activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/activity_login"
        android:gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo" />
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"/>
        </LinearLayout>



        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorAccent" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/fnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:hint="@string/fname"
                android:padding="10dp"
                android:translationY="5dp"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
               />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/lnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname"
                android:translationY="5dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:translationY="5dp"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number"
                android:translationY="5dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:translationY="5dp"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:padding="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="#347108"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:textColor="@color/colorWhite"
                android:translationY="5dp"
                android:inputType="textPassword"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:padding="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etPasswordLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/rePasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/re_enter_password"
                android:translationY="5dp"
                android:textColor="@color/colorAccent"
                android:inputType="textPassword"
                android:background="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:layout_marginBottom="20dp"
                android:padding="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:textColor="#347108"
            android:layout_height="wrap_content"
            android:text="@string/medical_history" />

        <TextView
            android:id="@+id/deschoosed1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disease"
            android:textColor="@color/colorWhite"
            android:background="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:layout_marginBottom="10dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/deschoosed2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disease"
            android:textColor="@color/colorWhite"
            android:background="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:layout_marginBottom="10dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/deschoosed3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/disease"
            android:textColor="@color/colorWhite"
            android:background="@color/colorText"
            android:textColorHint="@color/colorHint"
            android:layout_marginBottom="10dp"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_red"
            android:textColor="@color/colorWhite"
            android:text="@string/save_data"
            android:textSize="19sp"
            android:layout_marginTop="5dp"
            android:id="@+id/editButton" />

    </LinearLayout>

</ScrollView>
