<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_index"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="@dimen/padding16"
    tools:context=".activates.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/search"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/main"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonLogin"
            android:background="@drawable/rounded_button_red"
            android:text="Get Started"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_index"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </RelativeLayout>
</RelativeLayout>

